--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/errorMessage"
+        android:layout_width="120dp"
+        android:layout_height="30dp"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="64dp"
+        tools:layout_editor_absoluteY="46dp" />
+
     <LinearLayout
         android:id="@+id/eventLayout"
         android:layout_width="413dp"
@@ -15,11 +23,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="190dp">
-
-        <TextView
-            android:id="@+id/event1"
-            android:layout_width="279dp"
-            android:layout_height="102dp" />
 
         <TextView
             android:id="@+id/event2"
@@ -40,6 +43,11 @@
             android:id="@+id/event5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/event1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <Button
@@ -56,7 +64,7 @@
         android:layout_height="41dp"
         android:layout_marginStart="64dp"
         android:layout_marginLeft="64dp"
-        android:text="Enter a date"
+        android:text="MM/DD"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="114dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
